完成"邮件发送"基础模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #logger
 logging.level.com.sunghowe.community=debug
 logging.file.name=D:/JAVA/workspace/newcodespace/data/community.log
+# MailProperties
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=1367809484@qq.com
+#spring.mail.password=sunghowekobe
+spring.mail.password=pnqqcxekqmediaeg
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
