完成"开发注册功能"模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.mail.username=1367809484@qq.com
 spring.mail.password=pnqqcxekqmediaeg
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+# community
+community.path.domain=http://localhost:8088
