完成"更新头像"模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,4 @@ spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
 # community
 community.path.domain=http://localhost:8088
+community.path.upload=D:/JAVA/workspace/newcodespace/data/upload
