--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 			<artifactId>fastjson</artifactId>
 			<version>2.0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 
 
 
