--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/community
 spring.thymeleaf.cache=false
 # DataSource Properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/community
+spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=sunghowekobe@12
 spring.datasorce.type=com.zaxxer.hikari.HikariDataSource
@@ -40,3 +40,7 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=test-consumer-group
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=3000
+# ElasticsearchProperties
+spring.data.elasticsearch.cluster-name=sunghowe
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+#spring.data.elasticsearch.cluster-name=
