--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ server.port=8088
 server.servlet.context-path=/community
 # Thymeleaf Properties
 spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
 # DataSource Properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=sunghowekobe@12
 spring.datasorce.type=com.zaxxer.hikari.HikariDataSource
