完成“上传文件至云服务器”模块以及处理遗留bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,10 @@ spring.quartz.properties.org.quartz.threadPool.threadCount=5
 # wk
 wk.image.command=d:/JAVA/wkhtmltopdf/bin/wkhtmltoimage
 wk.image.storage=d:/JAVA/workspace/newcodespace/data/wk-images
+# qiniu
+qiniu.key.access=gkdGBz3sJGq9he12K3w15MLizNM8_bobluKQyI02
+qiniu.key.secret=eV0HBwn-Sm0abnFOIqMZVo1x-zLtdFH_C_CKVUBV
+qiniu.bucket.header.name=community-sh-header
+qiniu.bucket.header.url=http://rdrkjlbsn.hd-bkt.clouddn.com
+qiniu.bucket.share.name=community-sh-share
+qiniu.bucket.share.url=http://rdrk5e3b9.hd-bkt.clouddn.com
