--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
+            <version>2.1.6.RELEASE</version>
+        </dependency>
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>7.2.23</version>
 		</dependency>
 
 	</dependencies>
