完成“优化性能”模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,6 @@ qiniu.bucket.header.name=community-sh-header
 qiniu.bucket.header.url=http://rdrkjlbsn.hd-bkt.clouddn.com
 qiniu.bucket.share.name=community-sh-share
 qiniu.bucket.share.url=http://rdrk5e3b9.hd-bkt.clouddn.com
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
