--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,6 @@ qiniu.bucket.share.url=http://rdrk5e3b9.hd-bkt.clouddn.com
 # caffeine
 caffeine.posts.max-size=15
 caffeine.posts.expire-seconds=180
+# actuator
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info,caches
